now it with json
Все теперь с json работает, осталось только обработку исключений добавить и тесты

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,7 @@ services:
       - "PYTHONUNBUFFERED=1"
 
   redis:
-    image: redis:latest
+    image: redis:6.2.1
+    command: redis-server
+    ports:
+        - "6379:6379"
