--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,21 @@ aiohttp==3.8.1
 aioredis==1.3.1
 aiosignal==1.2.0
 async-timeout==4.0.1
+asyncio-redis==0.16.0
 attrs==21.2.0
 charset-normalizer==2.0.7
 Deprecated==1.2.13
 frozenlist==1.2.0
 hiredis==2.0.0
 idna==3.3
+iniconfig==1.1.1
 multidict==5.2.0
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.6
 redis==4.0.1
+toml==0.10.2
 typing-extensions==4.0.0
 wrapt==1.13.3
 yarl==1.7.2
